--- a/app/src/main/res/layout/activity_badge.xml
+++ b/app/src/main/res/layout/activity_badge.xml
@@ -18,10 +18,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
+            android:fontFamily="@font/megrim"
             android:gravity="center"
-            android:text="YOUR BADGES"
+            android:text="Your Badges"
             android:textColor="@color/colorAccent"
-            android:textSize="24sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,15 +31,17 @@
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="60dp"
-            android:layout_marginRight="60dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginRight="55dp"
+            android:fontFamily="@font/megrim"
             android:gravity="center"
             android:text="Golden Bridge \n 2,737 m"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/GBridge" />
 
@@ -67,14 +70,16 @@
 
         <TextView
             android:id="@+id/textView8"
-            android:layout_width="90dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:layout_marginLeft="60dp"
+            android:layout_marginStart="55dp"
+            android:layout_marginLeft="55dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/megrim"
             android:gravity="center"
-            android:text="Bahamas \n 1,070 km"
+            android:text="Bahamas \n 1,070 m"
             android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Bahamas" />
 
@@ -91,14 +96,16 @@
 
         <TextView
             android:id="@+id/textView9"
-            android:layout_width="90dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:layout_marginLeft="60dp"
+            android:layout_marginStart="55dp"
+            android:layout_marginLeft="55dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/megrim"
             android:gravity="center"
             android:text="Route66 \n 3,940 km"
             android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Route66" />
 
@@ -115,14 +122,16 @@
 
         <TextView
             android:id="@+id/K2_text"
-            android:layout_width="90dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="60dp"
-            android:layout_marginRight="60dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginRight="55dp"
+            android:fontFamily="@font/megrim"
             android:gravity="center"
             android:text="K2 \n 8,611 km"
             android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/K2" />
 
@@ -139,14 +148,16 @@
 
         <TextView
             android:id="@+id/Waterfall_text"
-            android:layout_width="90dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:layout_marginLeft="60dp"
+            android:layout_marginStart="55dp"
+            android:layout_marginLeft="55dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/megrim"
             android:gravity="center"
             android:text="Niagara Falls \n 11,399 km"
             android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Waterfall" />
 
@@ -167,15 +178,17 @@
 
         <TextView
             android:id="@+id/Sahara_text"
-            android:layout_width="90dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="60dp"
-            android:layout_marginRight="60dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginRight="55dp"
             android:layout_marginBottom="60dp"
+            android:fontFamily="@font/megrim"
             android:gravity="center"
             android:text="Sahara \n 15,940 km"
             android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Sahara" />
